--- a/service.yaml
+++ b/service.yaml
@@ -1,13 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nodejs-service
+  name: node-app-service
+  namespace: default
 spec:
-  type: ClusterIP  # or LoadBalancer if not using ALB Ingress
   selector:
-    app: node-app   # This must match the Pod label
+    app: node-app
+  type: NodePort
   ports:
     - protocol: TCP
-      port: 80
-      targetPort: 9090
+      port: 9090      # Internal cluster port
+      targetPort: 9090 # Container port
+      nodePort: 32000  # Port to access externally
 
